<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/loc_title">
        <Preference android:title="@string/pref_location_title"
            android:key="swa_loc">
            <intent android:targetPackage="com.survivingwithandroid.weatherapp"
                android:targetClass="com.survivingwithandroid.weatherapp.settings.SearchLocationActivity"
                />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_unit_title">
        <ListPreference android:key="swa_temp_unit"
            android:title="@string/temp_title"
            android:entryValues="@array/unit_values"
            android:entries="@array/unit_names"
            android:defaultValue="c" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/lang_title">
        <ListPreference android:key="swa_lang"
            android:title="@string/pref_lang_title"
            android:entryValues="@array/lang_values"
            android:entries="@array/lang_names"
            android:defaultValue="en" />

    </PreferenceCategory>

</PreferenceScreen>