<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" >

            <ImageView
                android:id="@+id/ivSpot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:src="@drawable/ic_launcher" />

            <Button
                android:id="@+id/btLoadPicture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btTakePicture"
                android:layout_toRightOf="@+id/btTakePicture"
                android:onClick="onLoadPictureClick"
                android:text="@string/btLoadPicture" />

            <Button
                android:id="@+id/btTakePicture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ivSpot"
                android:layout_below="@+id/ivSpot"
                android:onClick="onTakePictureClick"
                android:text="@string/btTakePicture" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_tvClothes" />

        <Spinner
            android:id="@+id/spClothes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_tvType" />

        <Spinner
            android:id="@+id/spType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_tvSleeve" />

        <Spinner
            android:id="@+id/spSleeve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_tvMaterial" />

        <Spinner
            android:id="@+id/spMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp" >

            <Button
                android:id="@+id/btFinishInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btCancel"
                android:onClick="onFinishInsertClick"
                android:text="@string/text_Insert" />

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btFinishInsert"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:onClick="onCancelClick"
                android:text="@string/text_btCancel" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>