<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.davidhsu.sdweather.ResideMenu.CameraFragment"
              android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tvTitleSpot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/text_TitleSpot"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRowCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ivSpot"
                android:layout_toRightOf="@+id/tvTitleSpot"
                android:text="@string/text_tvRowCount"
                android:textColor="#0000FF"
                android:textSize="20sp"
                android:layout_marginLeft="12dp" />

            <ImageView
                android:id="@+id/ivSpot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitleSpot"
                android:layout_centerHorizontal="true"
                android:layout_margin="6dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tvTitleId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ivSpot"
                android:layout_marginTop="5dp"
                android:text="@string/text_SpotId"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTitleClothes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/tvTitleId"
                android:layout_below="@+id/tvId"
                android:text="@string/text_SpotClothes"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTitleType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_SpotType"
                android:textSize="16sp"
                android:layout_below="@+id/tvTitleClothes"
                android:layout_alignRight="@+id/tvTitleClothes"
                android:layout_alignEnd="@+id/tvTitleClothes" />

            <TextView
                android:id="@+id/tvTitleSleeve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/tvTitleId"
                android:layout_below="@+id/tvTitleType"
                android:layout_marginTop="5dp"
                android:text="@string/text_SpotSleeve"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTitleMaterial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/tvTitleId"
                android:layout_below="@+id/tvTitleSleeve"
                android:layout_marginTop="5dp"
                android:text="@string/text_SpotMaterial"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignTop="@+id/tvTitleId"
                android:layout_toRightOf="@+id/tvTitleId"
                android:layout_toEndOf="@+id/tvTitleId"
                android:layout_marginLeft="25dp" />

            <TextView
                android:id="@+id/tvClothes"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignLeft="@+id/tvId"
                android:layout_alignTop="@+id/tvTitleClothes" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignTop="@+id/tvTitleType"
                android:layout_alignLeft="@+id/tvClothes" />

            <TextView
                android:id="@+id/tvSleeve"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignTop="@+id/tvTitleSleeve"
                android:layout_alignLeft="@+id/tvType" />

            <TextView
                android:id="@+id/tvMaterial"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_below="@+id/tvSleeve"
                android:layout_alignTop="@+id/tvTitleMaterial"
                android:layout_alignLeft="@+id/tvSleeve" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.16">

        <ImageButton
            android:id="@+id/btBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btNext"
            android:layout_alignBottom="@+id/btNext"
            android:src="@drawable/back"
            android:layout_alignLeft="@+id/btInsert"
             />   <!-- android:onClick="onBackClick" -->

        <ImageButton
            android:id="@+id/btNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btDelete"
            android:src="@drawable/next"
            android:layout_alignRight="@+id/btDelete"
            />  <!--android:onClick="onNextClick" -->

        <ImageButton
            android:id="@+id/btInsert"
            android:layout_width="wrap_content"
            android:src="@drawable/insert"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btUpdate"
             />  <!--android:onClick="onInsertClick"-->

        <ImageButton
            android:id="@+id/btUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/update"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
             />  <!--android:onClick="onUpdateClick"-->

        <ImageButton
            android:id="@+id/btDelete"
            android:src="@drawable/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btInsert"
            android:layout_alignTop="@+id/btInsert"
            android:layout_toRightOf="@+id/btUpdate"
             />  <!--android:onClick="onDeleteClick"-->

    </RelativeLayout>

</LinearLayout>
